--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Um monte de fios.
-description: Board is a stylish full-width masonry grid theme. Made for designers, artists, photographers and developers to show off their best work.
+description: Um estúdio focado no desenvolvimento de produtos e instalações físicas.
 featured_image: /images/social.png
 ---
 
